--- a/src/components/LoginSignup.css
+++ b/src/components/LoginSignup.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap");
 
 button {
   background-color: transparent;
@@ -112,7 +111,7 @@ input::placeholder {
 
 .user_options-container {
   position: relative;
-  width: 80%;
+  width: 70%;
 }
 
 .user_options-text {
@@ -175,7 +174,8 @@ input::placeholder {
   min-height: 420px;
   background-color: #fff;
   border-radius: 3px;
-  box-shadow: 2px 0 15px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 2px 0 15px rgba(0, 0, 0, 0.25); */
+  box-shadow: 0px 0px 30px 8px rgba(0, 0, 0, 0.75);
   overflow: hidden;
   transform: translate3d(100%, -50%, 0);
   transition: transform 0.4s ease-in-out;
@@ -268,8 +268,10 @@ input::placeholder {
 }
 
 .user_forms-login {
-    top: 70px;
+
+    top: 70px !important;
     left: 40px;
+
 }
 
 .user_options-forms .user_forms-signup {
