--- a/src/components/Nav2.module.css
+++ b/src/components/Nav2.module.css
@@ -41,12 +41,40 @@
 .navList li {
   list-style: none;
   cursor: pointer;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: 600;
   font-family: var(--font-poppins);
   transition: all ease-in-out 0.2s;
   text-decoration: none;
 }
+
+.navList li a {
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.navList li:hover {
+  transform: translateY(-3px);
+}
+
+.navList li a::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  height: 4px;
+  background-color: #4f37a7; /* Change Color Here */
+  transform: scaleY(0);
+  transform-origin: bottom;
+  transition: transform 0.3s ease;
+}
+
+.navList li a:hover::before {
+  transform: scaleY(1);
+}
+
 
 .navList li a {
   text-decoration: none;
@@ -318,3 +346,68 @@
   }
 }
 
+
+.signupDropdown {
+  /* position: relative; */
+  display: inline-block;
+}
+
+/* .signupButton {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+} */
+
+.signupButton:hover {
+  background-color: #0056b3;
+}
+
+.dropdownIcon {
+  transition: transform 0.3s ease;
+}
+
+.dropdownContent {
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  overflow: hidden;
+  background-color: white;
+  color: black;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.4);
+  border-radius: 12px;
+  min-width: 150px;
+  z-index: 1000;
+  animation: dropdownFadeIn 0.3s ease;
+}
+
+@keyframes dropdownFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.dropdownItem {
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: all 0.3s ease;
+}
+
+
+.dropdownItem:hover {
+  background-color: #b4b4b9;
+  overflow: hidden;
+  transform: scale(1.04);
+}
