--- a/src/components/LoginSignup.css
+++ b/src/components/LoginSignup.css
@@ -93,7 +93,7 @@ input::placeholder {
 .user {
   display: flex;
   position: fixed;
-  /* top: 50%; */
+  top: 10%;
   /* left: 50%; */
   justify-content: center;
   align-items: center;
@@ -170,8 +170,8 @@ input::placeholder {
   position: absolute;
   top: 50%;
   left: 30px;
-  width: calc(50% - 30px);
-  min-height: 420px;
+  width: calc(50% - 50px);
+  min-height: 460px;
   background-color: #fff;
   border-radius: 3px;
   /* box-shadow: 2px 0 15px rgba(0, 0, 0, 0.25); */
@@ -186,7 +186,7 @@ input::placeholder {
 }
 
 .user_options-forms .forms_title {
-  margin-bottom: 45px;
+  margin-bottom: 5px;
   font-size: 1.7rem;
   font-weight: 700;
   line-height: 1em;
