--- a/src/components/LoginSignup.css
+++ b/src/components/LoginSignup.css
@@ -169,9 +169,9 @@ input::placeholder {
 .user_options-forms {
   position: absolute;
   top: 50%;
-  left: 30px;
-  width: calc(50% - 50px);
-  min-height: 460px;
+  left: 40px;
+  width: calc(50% - 40px);
+  min-height: 480px;
   background-color: #fff;
   border-radius: 3px;
   /* box-shadow: 2px 0 15px rgba(0, 0, 0, 0.25); */
@@ -186,7 +186,69 @@ input::placeholder {
 }
 
 .user_options-forms .forms_title {
-  margin-bottom: 5px;
+  margin-bottom: 45px;
+  font-size: 1.7rem;
+  font-weight: 700;
+  line-height: 1em;
+  text-transform: uppercase;
+  color: #e8716d;
+  letter-spacing: 0.1rem;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.custom-file-upload {
+  /* border-bottom: 2px solid #ccc; */
+  display: inline-block;
+  padding-top: 6px;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+  color: #6e6e6e;
+  text-align: right;
+  width: 47%;
+  /* justify-content: start; */
+  align-items: center;
+  transition: all 500ms ease-in-out;
+}
+
+.custom-file-upload :hover {
+  box-shadow: 0 0.7em 1.5em -0.5em #5e2bff;
+  /* transform: scale(1.02); */
+}
+
+.cssbuttons-io-button {
+  display: flex;
+  align-items: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 5px 15px;
+  color: white;
+  background: #ad5389;
+  background: linear-gradient(0deg, #5e2bff 0%, #5e2bff 100%);
+  border: none;
+
+  letter-spacing: 0.05em;
+  border-radius: 20em;
+}
+
+.cssbuttons-io-button svg {
+  margin-right: 8px;
+}
+
+.cssbuttons-io-button:hover {
+  box-shadow: 0 0.5em 1.5em -0.5em rgb(149, 91, 255);
+}
+
+.cssbuttons-io-button:active {
+  box-shadow: 0 0.3em 1em -0.5em rgb(160, 109, 255);
+}
+
+.member-forms_title {
+  margin-bottom: 20px;
   font-size: 1.7rem;
   font-weight: 700;
   line-height: 1em;
@@ -201,14 +263,14 @@ input::placeholder {
 
 .user_options-forms .forms_field-input {
   width: 100%;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 2px solid #ccc;
   padding: 6px 20px 6px 6px;
   /* font-family: "Montserrat", sans-serif; */
   font-family: var(--font-poppins);
-  font-size: 1.1rem;
+  font-size: 1rem;
   /* font-weight: 300; */
   color: black;
-  font-weight: 600;
+  font-weight: 500;
   letter-spacing: 0.1rem;
   transition: border-color 0.2s ease-in-out;
 }
@@ -258,7 +320,7 @@ input::placeholder {
 .user_options-forms .user_forms-signup,
 .user_options-forms .user_forms-login {
   position: absolute;
-  top: 30px;
+  top: 60px;
   left: 40px;
   width: calc(100% - 80px);
   opacity: 0;
@@ -268,10 +330,8 @@ input::placeholder {
 }
 
 .user_forms-login {
-
-    top: 70px !important;
-    left: 40px;
-
+  top: 70px !important;
+  left: 40px;
 }
 
 .user_options-forms .user_forms-signup {
