profile section integrated

--- a/src/App.css
+++ b/src/App.css
@@ -355,3 +355,44 @@
   /* transform: translateY(-30px); */
   transition-duration: 0.3s;
 }
+
+
+
+.viewDetails-Btn {
+  /* padding: 8px 8px; */
+  border: unset;
+  /* border-radius: calc(var(--radius) - 2px); */
+  color: #212121;
+  z-index: 1;
+  background: #e8e8e8;
+  position: relative;
+  font-weight: 500;
+  font-size: 1rem;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  overflow: hidden;
+ }
+ 
+ .viewDetails-Btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: calc(var(--radius) - 2px);
+  background-color: #1D4ED8;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+ }
+ 
+ .viewDetails-Btn:hover {
+  color: #e8e8e8;
+ }
+ 
+ .viewDetails-Btn:hover::before {
+  width: 100%;
+ }
