--- a/src/components/Nav2.module.css
+++ b/src/components/Nav2.module.css
@@ -185,7 +185,7 @@
   background-color: rgba(255, 255, 255, 0.9);
   animation: fadeIn 0.5s ease forwards;
   border-radius: 50px;
-  top: 8px;
+  top: 0.5%;
 }
 
 @keyframes fadeIn {
